--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "dev": "webpack-dev-server"
   },
   "dependencies": {
-    "caver-js": "^1.0.0",
-    "truffle-hdwallet-provider-klaytn": "^1.0.13-a",
-    "spin.js": "^4.0.0",
-    "truffle": "^5.0.31"
+    "caver-js": "1.0.0",
+    "truffle-hdwallet-provider-klaytn": "1.0.13-a",
+    "spin.js": "4.0.0",
+    "truffle": "5.0.31"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^4.6.0",
-    "webpack": "^4.7.0",
-    "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.4",
-    "openzeppelin-solidity": "^2.3.0",
+    "copy-webpack-plugin": "4.6.0",
+    "webpack": "4.7.0",
+    "webpack-cli": "3.1.1",
+    "webpack-dev-server": "3.1.4",
+    "openzeppelin-solidity": "2.3.0",
     "ipfs-http-client": "32.0.1"
   },
   "eslintConfig": {
